# agentic-application-framework

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  PROJECT.md  README.md  aaf.yaml
.githooks/: pre-commit  pre-push
.github/workflows/: audit.yml  ci.yml  release.yml
core/crates/aaf-contracts/: Cargo.toml
core/crates/aaf-contracts/src/: artifact.rs  capability.rs  error.rs  handoff.rs  identity.rs  ids.rs  intent.rs  learn.rs  lib.rs  observation.rs  policy.rs  prelude.rs  task.rs  tool.rs  trace.rs  trust.rs
core/crates/aaf-eval/: Cargo.toml
core/crates/aaf-eval/src/: golden.rs  judge.rs  lib.rs  regression.rs  replay.rs  report.rs
core/crates/aaf-federation/: Cargo.toml
core/crates/aaf-federation/src/: cosign.rs  lib.rs
core/crates/aaf-identity/: Cargo.toml
core/crates/aaf-identity/src/: attestation.rs  delegation.rs  did.rs  error.rs  keystore.rs  lib.rs  manifest.rs  prelude.rs  revocation.rs
core/crates/aaf-identity/src/sbom/: export.rs  mod.rs
core/crates/aaf-intent/: Cargo.toml
core/crates/aaf-intent/src/: cache.rs  classifier.rs  compiler.rs  enricher.rs  error.rs  extractor.rs  lib.rs  prelude.rs  refinement.rs  versioning.rs
core/crates/aaf-learn/: Cargo.toml
core/crates/aaf-learn/src/: capability_scorer.rs  escalation_tuner.rs  fast_path_miner.rs  lib.rs  router_tuner.rs
core/crates/aaf-llm/: Cargo.toml
core/crates/aaf-llm/src/: anthropic.rs  budget.rs  lib.rs  mock.rs  pricing.rs  provider.rs  router.rs
core/crates/aaf-memory/: Cargo.toml
core/crates/aaf-memory/src/: context.rs  facade.rs  lib.rs  prelude.rs
core/crates/aaf-ontology/: Cargo.toml
core/crates/aaf-ontology/src/: entity.rs  error.rs  import.rs  lib.rs  lineage.rs  prelude.rs  registry.rs  relation.rs  resolver.rs  version.rs
core/crates/aaf-planner/: Cargo.toml
core/crates/aaf-planner/src/: bounds.rs  cache.rs  composition.rs  fast_path.rs  lib.rs  plan.rs  planner.rs  router.rs
core/crates/aaf-policy/: Cargo.toml
core/crates/aaf-policy/src/: approval.rs  context.rs  engine.rs  guard.rs  lib.rs  prelude.rs  scope.rs
core/crates/aaf-policy/src/rules/: boundary.rs  budget.rs  composition.rs  injection.rs  mod.rs  pii.rs  scope.rs  side_effect.rs
core/crates/aaf-registry/: Cargo.toml
core/crates/aaf-registry/src/: a2a.rs  circuit_breaker.rs  degradation.rs  discovery.rs  error.rs  health.rs  lib.rs  prelude.rs  registration.rs  store.rs  version.rs
core/crates/aaf-runtime/: Cargo.toml
core/crates/aaf-runtime/src/: budget.rs  checkpoint.rs  compensation.rs  error.rs  executor.rs  graph.rs  invoke.rs  lib.rs  prelude.rs  scheduler.rs  timeout.rs
core/crates/aaf-runtime/src/node/: agent.rs  approval.rs  deterministic.rs  event_wait.rs  fork.rs  mod.rs
core/crates/aaf-runtime/tests/: executor_integration.rs
core/crates/aaf-saga/: Cargo.toml
core/crates/aaf-saga/src/: bridge.rs  definition.rs  executor.rs  lib.rs  recovery.rs  state.rs
core/crates/aaf-server/: Cargo.toml
core/crates/aaf-server/src/: config.rs  identity.rs  import.rs  lint.rs  main.rs
core/crates/aaf-sidecar/: Cargo.toml
core/crates/aaf-sidecar/src/: acl.rs  capability.rs  fast_path.rs  guard.rs  health.rs  lib.rs  mapping.rs  proxy.rs
core/crates/aaf-storage/: Cargo.toml
core/crates/aaf-storage/src/: artifact.rs  checkpoint.rs  error.rs  lib.rs  memory.rs  registry.rs  trace.rs
core/crates/aaf-surface/: Cargo.toml
core/crates/aaf-surface/src/: error.rs  event.rs  ingest.rs  lib.rs  lifecycle.rs  projection.rs  proposal.rs  router.rs  situation_packager.rs
core/crates/aaf-trace/: Cargo.toml
core/crates/aaf-trace/src/: cost_attribution.rs  export.rs  lib.rs  metrics.rs  prelude.rs  recorder.rs  replay.rs
core/crates/aaf-transport/: Cargo.toml
core/crates/aaf-transport/src/: lib.rs
core/crates/aaf-trust/: Cargo.toml
core/crates/aaf-trust/src/: autonomy.rs  delegation.rs  lib.rs  prelude.rs  promotion.rs  registry.rs  score.rs  signing.rs
core/crates/aaf-wrapper/: Cargo.toml
core/crates/aaf-wrapper/src/: lib.rs
core/tests/integration/: Cargo.toml
core/tests/integration/src/: lib.rs
core/tests/integration/tests/: aafservice_ecommerce.rs  app_native_surface_e2e.rs  capability_invoke_e2e.rs  cross_cell_federation_e2e.rs  e1_feedback_smoke.rs  e1_slice_b_smoke.rs  e2_ontology_smoke.rs  e2_slice_b_smoke.rs  e2_slice_c_smoke.rs  e3_surface_smoke.rs  e4_tool_loop_smoke.rs  eval_golden_e2e.rs  feedback_loop_e2e.rs  full_enhanced_pipeline.rs  full_pipeline.rs  governed_invocation_e2e.rs  memory_context_e2e.rs  order_saga_e2e.rs  parallel_orchestration_e2e.rs  resilient_query_e2e.rs  service_integration.rs  sidecar_gateway_e2e.rs  x1_identity_smoke.rs  x1_slice_b_integration.rs  x1_slice_c_cli.rs
development/: README.md  architecture-overview.md  build-and-ci.md  capability-authoring.md  changing-contracts.md  coding-conventions.md  contracts-reference.md  crate-reference.md  error-handling.md  examples-walkthrough.md  extension-points.md  glossary.md  iteration-playbook.md  known-gotchas.md  learning-pipeline.md  next-slices.md  observability.md  roadmap.md  runtime-internals.md  testing-strategy.md
docs/: README.md  architecture.md  contracts.md  deployment.md  fast-path.md  getting-started.md  integration-cell-architecture.md  integration-microservices.md  integration-modular-monolith.md  ontology-lint.md  policies.md  saga.md  security.md
docs/adr/: ADR-008-entity-space-boundaries.md  ADR-017-agent-did-and-manifest.md  README.md
docs/enhancements/: README.md  e1-feedback-spine.md  e2-domain-ontology.md  e3-app-native-surface.md  f1-developer-experience.md  f2-llm-integration.md  f3-protocol-bridges.md  x1-agent-identity.md
examples/: README.md
examples/agentic-tool-loop/: README.md  aaf.yaml
examples/app-native-surface/: README.md  aaf.yaml
examples/cross-cell-federation/: README.md  aaf.yaml  federation.yaml
examples/eval-golden/: README.md  aaf.yaml  golden-suite.yaml
examples/feedback-loop/: README.md  aaf.yaml
policies/: README.md
scripts/: bump-version.sh  schema_validate.py
(+55 files in other folders)
