[package]
name = "aaf-contracts"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "AAF strongly-typed contract surface (Intent, Capability, Task, Artifact, Handoff, Observation, Trust, Policy, Trace)."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
