[package]
name = "aaf-eval"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "AAF evaluation harness: Judge trait, golden suites, replay divergence, regression report (Enhancement E1 Slice A)."

[dependencies]
aaf-contracts = { workspace = true }
aaf-trace = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
