[package]
name = "aaf-federation"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Cell / cross-org federation: cell config, cross-cell routing, agreement enforcement, data boundary."

[dependencies]
aaf-contracts = { workspace = true }
aaf-identity = { workspace = true }
aaf-policy = { workspace = true }
aaf-registry = { workspace = true }
chrono = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
