[package]
name = "aaf-intent"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Intent Compiler: classify, extract, enrich, refine, cache, version."

[dependencies]
aaf-contracts = { workspace = true }
aaf-memory = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
parking_lot = { workspace = true }
chrono = { workspace = true }
once_cell = { workspace = true }
regex = { workspace = true }
