[package]
name = "aaf-llm"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "LLM provider trait, mock provider, value-based router, per-call budget enforcement."

[dependencies]
aaf-contracts = { workspace = true }
async-trait = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
