[package]
name = "aaf-memory"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Four-layer memory orchestration with context budget manager (~7500 tok)."

[dependencies]
aaf-contracts = { workspace = true }
aaf-storage = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
