[package]
name = "aaf-ontology"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "AAF domain ontology: Entity/Relation/Classification + in-memory registry (Rule 14)."

[dependencies]
aaf-contracts = { workspace = true }
async-trait = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
