[package]
name = "aaf-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Storage trait definitions and in-memory backends for AAF (Rule 11: Storage Behind Traits)."

[dependencies]
aaf-contracts = { workspace = true }
async-trait = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
