[package]
name = "aaf-integration-tests"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
publish = false
description = "Cross-crate integration tests covering Intent Compiler → Planner → Runtime → Trace."

[lib]
path = "src/lib.rs"

[dev-dependencies]
aaf-contracts = { workspace = true }
aaf-storage = { workspace = true }
aaf-trace = { workspace = true }
aaf-policy = { workspace = true }
aaf-registry = { workspace = true }
aaf-intent = { workspace = true }
aaf-planner = { workspace = true }
aaf-runtime = { workspace = true }
aaf-saga = { workspace = true }
aaf-llm = { workspace = true }
aaf-ontology = { workspace = true }
aaf-identity = { workspace = true }
aaf-trust = { workspace = true }
aaf-eval = { workspace = true }
aaf-surface = { workspace = true }
aaf-memory = { workspace = true }
aaf-federation = { workspace = true }
aaf-learn = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
